# REVIVAL

./: .gitignore  1  CMakeLists.txt  REVIVAL.sln  REVIVAL.sln.old  REVIVAL.suo.old  moshe.patch  packsrc.bat  patch  patch2
DEMO/: CHASE.CPP  CITY.CPP  CITY.H  CITYold.CPP  CMakeLists.txt  CRASH.CPP  CREDITS.CPP  Config.cpp  Config.h  D3D8.CPP  D3D8.h  D3D8i.h  DDRAW.cpp  DDRAW.h  DEMO.dsp  DEMO.vcproj  DEMO.vcproj.old  DEMO.vcxproj  DEMO.vcxproj.filters  END.CPP  FDS_DECS.H  FDS_DECS.orig.H  FDS_DEFS.orig.H  FDS_VARS.orig.H  FMod.lib  FOUNT.CPP  FOUNTAIN.CPP  FOUNTAIN.H  FillerTest.cpp  FillerTest.h  GREEET.CPP  GREETS.CPP  Gdi.cpp  Gdi.h  Glat.cpp  IJLD.lib  ImageCompression.cpp  ImageCompression.h  Koch.cpp  Nova.cpp  (+21 more)
DEMO/My Amplifier Results - DEMO/: My Amplifier Results - DEMO.amplxeproj
FDS/: BIHI.lst  BILINEAR.lst  BITRFLAT.lst  BITRUE.lst  BITTRUE.lst  CMakeLists.txt  Clipper.cpp  Clipper.h  FDS.dsp  FDS.vcproj  FDS.vcproj.old  FDS.vcxproj  FDS.vcxproj.filters  FDS_DECS.H  FRUSTRUM.H  Fds_defs.h  Fds_vars.h  GOURAUD.lst  GOURMMX.lst  GOURMMXT.lst  Gradient.cpp  Gradient.h  IXTGZM.lst  IXTGZSAM.asm  IXTGZSAM.lst  IXTGZTAM.lst  IXTGZTM.lst  PackedVars.lst  SCALE.lst  SCALE64.lst  SCALEMMX.lst  SclMMX32.lst  TEXTGOUR.lst  TRNSGOUR.lst  Threads.h  WOBTR.lst  WOBTR320.lst  WOBTRMMX.lst  WOBTRXXX.lst  ZSCALE.lst  (+2 more)
FDS/3DS/: 3DS_READ.CPP  FUTILS.CPP  FUtils.h  I_defs.h  MATERIAL.CPP  TRACKS.CPP  WORLD.CPP
FDS/Base/: BaseDefs.h  Camera.h  Color.h  Edge.h  FDS_DECS.H  FDS_DEFS.H  FDS_VARS.H  Face.h  KeyFrame.h  Material.h  Matrix.h  Object.h  Omni.h  Palette.h  Quaternion.h  Scene.h  Spline.h  SpotLight.h  Surface.h  TBR.h  Texture.cpp  Texture.h  TriMesh.h  Vector.h  Vertex.h
FDS/CAMERAS/: CAMERAS.CPP
FDS/CoffReader/: CoffReader.cpp  CoffReader.h
FDS/DPMI/: DPMI.CPP  DPMI.H  STUPDPMI.CPP
FDS/FILLERS/: BIHI.ASM  BILINEAR.ASM  BITRFLAT.ASM  BITRUE.ASM  BITTRUE.ASM  F4Vec.cpp  F4Vec.h  FILLERS.CPP  FILLERS.H  GOURAUD.ASM  GOURMMX.ASM  GOURMMXT.ASM  IX.cpp  IX.h  IXFZ.cpp  IXGZ.cpp  IXNotTiled.ASM  IXTGZ.cpp  IXTGZM before Z 16pixel correction.ASM  IXTGZM.ASM  IXTGZM.ASM.backup  IXTGZTAM.ASM  IXTGZTM.ASM  IXTGZTTAM.ASM  IXTZ.cpp  SCALE.ASM  SCALE64.ASM  SCALEMMX.ASM  SCALEMMX.old  SclMMX32.asm  SimdHelpers.h  TEX.CPP  TEXTGOUR.ASM  TRNSGOUR.ASM  TestFillers.cpp  TheBarryG.h  TheOtherBarry.cpp  TheOtherBarry.h  ZSCALE.ASM  old IXTGZTM.ASM
FDS/FLD/: FLD_CONV.CPP  FLD_MAT.CPP  FLD_READ.CPP  FLD_READ.H  LWREAD.H
FDS/FRUSTRUM/: FRUSTRUM.CPP
FDS/IMGCODE/: IMGCODE.CPP  QUANTUM.H
FDS/IMGGENR/: IMGGENR.CPP  IMGGENR.H  WOBTR.ASM  WOBTR320.ASM  WOBTRMMX.asm  WOBTRXXX.ASM  WOBTRnew.asm
FDS/IMGPROC/: Imgproc.cpp
FDS/ISR/: ISR.CPP
FDS/MATH/: MATH.CPP
FDS/MDSPLAY/: MDSPLAY.CPP  MIDASDLL.H
FDS/MISC/: MOUSE.CPP  Memmgr.cpp  PREPROC.CPP  PREPROC.H  TABLES.CPP  TxtrLib.cpp  mmreg.inl
FDS/Old/: FDS_DECS.H  FDS_DEFS.H  FDS_VARS.H
FDS/PCLSYS/: PCLSYS.CPP
FDS/RADIO/: RADIO.CPP
FDS/RENDER/: GENERAL.H  PackedVars.ASM  RENDER.CPP  SORTS.H  SQRTTBL.H
FDS/SkyCube/: SkyCube.cpp  SkyCube.h
FDS/V3D/: V3D_READ.CPP
FDS/VESA/: FONTS.CPP  TABLES.CPP  VESA.CPP  VESA_TABLES.CPP  Vesa.h
FDS/simd/: vectorf128.h
FMod.old/: FMod.cpp  FMod.dsp  FMod.h  FMod.vcproj  FMod.vcproj.old  FMod.vcxproj  FMod.vcxproj.filters
FMod.old/api/delphi/: fmoderrors.pas
FMod.old/api/lib/: fmodlcc.lib  fmodwc.lib
FMod.old/api/masm/: fmod.inc  fmod_errors.asm  fmpreset.asm
FMod.old/api/vb/: fmod.bas
IJLD/: IJLD.cpp  IJLD.dsp  IJLD.vcproj  IJLD.vcproj.old  IJLD.vcxproj  IJLD.vcxproj.filters  ijl.h
Modplayer/: CMakeLists.txt  Modplayer.h  Modplayer.vcxproj  Modplayer.vcxproj.filters
Original/READERS/LWREAD/OLD/: LWOREAD.CPP
Original/dos-rev/FDS/: FDS.BAK
Original/dos-rev/FDS/SOURCE/3DS/: 3DS_READ.CPP
Original/dos-rev/FDS/SOURCE/CAMERAS/: CAMERAS.CPP
Original/dos-rev/FDS/SOURCE/DPMI/: DPMI.CPP  STUPDPMI.CPP
Original/dos-rev/FDS/SOURCE/FILLERS/: FILLERS.CPP
Original/dos-rev/FDS/SOURCE/FLD/: FLD_CONV.BAK  FLD_CONV.CPP  FLD_MAT.BAK  FLD_MAT.CPP  FLD_READ.BAK  FLD_READ.CPP
Original/dos-rev/FDS/SOURCE/FRUSTRUM/: FRUSTRUM.CPP
Original/dos-rev/FDS/SOURCE/IMGCODE/: IMGCODE.CPP
Original/dos-rev/FDS/SOURCE/IMGGENR/: IMGGENR.CPP
Original/dos-rev/FDS/SOURCE/IMGPROC/: IMGPROC.CPP
Original/dos-rev/FDS/SOURCE/ISR/: ISR.CPP
Original/dos-rev/FDS/SOURCE/MATH/: MATH.CPP
Original/dos-rev/FDS/SOURCE/MDSPLAY/: MDSPLAY.CPP
Original/dos-rev/FDS/SOURCE/MISC/: MOUSE.CPP  PREPROC.BAK  TABLES.CPP
Original/dos-rev/FDS/SOURCE/PCLSYS/: PCLSYS.CPP
Original/dos-rev/FDS/SOURCE/RENDER/: RENDER.BAK  RENDER.CPP
Original/dos-rev/FDS/SOURCE/V3D/: V3D_READ.CPP
Original/dos-rev/FDS/SOURCE/VESA/: VESA.CPP
Original/dos-rev/REVIVAL/: REV.H  SHIT.CPP
Original/dos-rev/REVIVAL/TEMP/: FDS.CPP
Release1/: libpng16.lib
Release2/: libpng16.lib
Runtime/: City.stat  fountain-profiling.txt  logfile.txt  rev.cfg
Runtime/SCENES/: CRASH.FLD
Runtime/TEXTURES/: LOGO.tga  PrimaryTest.lwf
fmod/: FMod.cpp  FMod.vcxproj  FMod.vcxproj.filters  FModWrapper.cpp  FModWrapper.h
jpeg/: jdhuff.c  jdphuff.c  jpeg.c  jpeg.vcxproj  jpeg.vcxproj.filters  jpeglib.h
libpng16/: libpng16.lib  libpng16.vcxproj  libpng16.vcxproj.filters  zlib.lib
lpng1637/projects/vstudio/Release Library/: libpng16.lib  zlib.bsc  zlib.lib
lpng1637/projects/vstudio/libpng/: libpng.vcxproj
lpng1637/projects/vstudio/libpng/Release Library/libpng.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  bscmake.command.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog
lpng1637/projects/vstudio/pnglibconf/: pnglibconf.vcxproj
lpng1637/projects/vstudio/pngstest/: pngstest.vcxproj
lpng1637/projects/vstudio/pngtest/: pngtest.vcxproj
lpng1637/projects/vstudio/pngunknown/: pngunknown.vcxproj
lpng1637/projects/vstudio/pngvalid/: pngvalid.vcxproj
lpng1637/projects/vstudio/zlib/: zlib.vcxproj
pngread/: pngread.vcxproj  pngread.vcxproj.filters
stats/: City.stat  City.xls  Fountain.stat  Fountain.xls  Greets.stat  Greets.xls
(+13 files in other folders)
