cmake_minimum_required(VERSION 3.12)
project(REVIVAL)

set(CMAKE_CXX_STANDARD 14)

include_directories(DEMO)
include_directories(FDS)
include_directories(FDS/3DS)
include_directories(FDS/DPMI)
include_directories(FDS/FILLERS)
include_directories(FDS/FLD)
include_directories(FDS/IMGCODE)
include_directories(FDS/MATH)
include_directories(FDS/MDSPLAY)
include_directories(FDS/MISC)
include_directories(FDS/Old)
include_directories(FDS/RENDER)
include_directories(FDS/SkyCube)
include_directories(FDS/V3D)
include_directories(FDS/VESA)
include_directories(fmod)
include_directories(FMod.old)
include_directories(FMod.old/api)
include_directories(FMod.old/api/inc)
include_directories(IJLD)

add_executable(REVIVAL
        DEMO/CHASE.CPP
        DEMO/CHASE.H
        DEMO/CITY.CPP
        DEMO/CITY.H
        DEMO/Config.cpp
        DEMO/Config.h
        DEMO/CRASH.CPP
        DEMO/CRASH.H
        DEMO/CREDITS.CPP
        DEMO/CREDITS.H
        DEMO/D3D8.CPP
        DEMO/D3D8.h
        DEMO/D3D8i.h
        DEMO/d3dapp.h
        DEMO/d3dfont.h
        DEMO/d3dres.h
        DEMO/d3dutil.cpp
        DEMO/d3dutil.h
        DEMO/DDRAW.cpp
        DEMO/DDRAW.h
        DEMO/dxutil.cpp
        DEMO/dxutil.h
        DEMO/END.CPP
        DEMO/FDS_DECS.H
        DEMO/FDS_DEFS.H
        DEMO/FDS_VARS.H
        DEMO/FillerTest.cpp
        DEMO/FillerTest.h
        DEMO/FOUNT.CPP
        DEMO/FOUNTAIN.CPP
        DEMO/FOUNTAIN.H
        DEMO/Gdi.cpp
        DEMO/Gdi.h
        DEMO/Glat.cpp
        DEMO/GLAT.H
        DEMO/GREEET.CPP
        DEMO/GREETS.CPP
        DEMO/GREETS.H
        DEMO/ImageCompression.cpp
        DEMO/ImageCompression.h
        DEMO/Koch.cpp
        DEMO/Koch.h
        DEMO/Nova.cpp
        DEMO/Nova.h
        DEMO/PhotonTracer.cpp
        DEMO/PhotonTracer.h
        DEMO/Raytracer.cpp
        DEMO/Raytracer.h
        DEMO/REV.CPP
        DEMO/Rev.h
        DEMO/SHIT.CPP
        DEMO/Win32Display.h
        FDS/3DS/3DS_READ.CPP
        FDS/3DS/FUTILS.CPP
        FDS/3DS/FUtils.h
        FDS/3DS/I_defs.h
        FDS/3DS/MATERIAL.CPP
        FDS/3DS/TRACKS.CPP
        FDS/3DS/WORLD.CPP
        FDS/CAMERAS/CAMERAS.CPP
        FDS/DPMI/DPMI.CPP
        FDS/DPMI/DPMI.H
        FDS/DPMI/STUPDPMI.CPP
        FDS/FILLERS/F4Vec.cpp
        FDS/FILLERS/F4Vec.h
        FDS/FILLERS/FILLERS.CPP
        FDS/FILLERS/IX.cpp
        FDS/FILLERS/IX.h
        FDS/FILLERS/IXFZ.cpp
        FDS/FILLERS/IXGZ.cpp
        FDS/FILLERS/IXTGZ.cpp
        FDS/FILLERS/IXTZ.cpp
        FDS/FILLERS/TestFillers.cpp
        FDS/FILLERS/TEX.CPP
        FDS/FLD/FLD_CONV.CPP
        FDS/FLD/FLD_MAT.CPP
        FDS/FLD/FLD_READ.CPP
        FDS/FLD/FLD_READ.H
        FDS/FLD/LWREAD.H
        FDS/FRUSTRUM/FL.CPP
        FDS/FRUSTRUM/FRUSTRUM.CPP
        FDS/IMGCODE/IMGCODE.CPP
        FDS/IMGCODE/QUANTUM.H
        FDS/IMGGENR/IMGGENR.CPP
        FDS/IMGPROC/Imgproc.cpp
        FDS/ISR/ISR.CPP
        FDS/MATH/BASEMATH.H
        FDS/MATH/MATH.CPP
        FDS/MDSPLAY/MDSPLAY.CPP
        FDS/MDSPLAY/MIDASDLL.H
        FDS/MISC/Memmgr.cpp
        FDS/MISC/mmreg.cpp
        FDS/MISC/mmreg.inl
        FDS/MISC/MOUSE.CPP
        FDS/MISC/PREPROC.CPP
        FDS/MISC/TABLES.CPP
        FDS/MISC/TxtrLib.cpp
        FDS/Old/FDS_DECS.H
        FDS/Old/FDS_DEFS.H
        FDS/Old/FDS_VARS.H
        FDS/PCLSYS/PCLSYS.CPP
        FDS/RADIO/RADIO.CPP
        FDS/RENDER/GENERAL.H
        FDS/RENDER/RENDER.CPP
        FDS/RENDER/SORTS.H
        FDS/RENDER/SQRTTBL.H
        FDS/SkyCube/SkyCube.cpp
        FDS/SkyCube/SkyCube.h
        FDS/V3D/M_DEFS.H
        FDS/V3D/OBJECTS.H
        FDS/V3D/V3D_READ.CPP
        FDS/VESA/FONTS.CPP
        FDS/VESA/TABLES.CPP
        FDS/VESA/VESA.CPP
        FDS/VESA/Vesa.h
        FDS/FDS_DECS.H
        FDS/FDS_DEFS.H
        FDS/Fds_vars.h
        fmod/FMod.cpp
        fmod/fmod.h
        fmod/fmod_errors.h
        fmod/fmoddyn.h
        fmod/FModWrapper.cpp
        fmod/FModWrapper.h
        fmod/wincompat.h
        FMod.old/api/inc/fmod.h
        FMod.old/api/inc/fmod.hpp
        FMod.old/api/inc/fmod_codec.h
        FMod.old/api/inc/fmod_common.h
        FMod.old/api/inc/fmod_dsp.h
        FMod.old/api/inc/fmod_dsp_effects.h
        FMod.old/api/inc/fmod_errors.h
        FMod.old/api/inc/fmod_output.h
        FMod.old/api/inc/wincompat.h
        FMod.old/FMod.cpp
        FMod.old/FMod.h
        IJLD/ijl.h
        IJLD/IJLD.cpp)
